--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "clsx": "^1.1.1",
     "cookies-next": "^2.0.4",
     "date-fns": "^2.28.0",
+    "flowbite": "^1.7.0",
+    "flowbite-react": "^0.5.0",
     "next": "12.1.6",
     "next-seo": "^5.4.0",
     "next-sitemap": "^3.0.5",
@@ -64,6 +66,9 @@
   },
   "lint-staged": {
     "package.json": "sort-package-json",
-    "**/*.{js,ts,tsx}": ["prettier --write", "eslint --cache --fix"]
+    "**/*.{js,ts,tsx}": [
+      "prettier --write",
+      "eslint --cache --fix"
+    ]
   }
 }
