--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.2",
     "@onrewind/ui": "^2.52.2",
+    "@types/react-swipeable-views": "^0.13.2",
     "algoliasearch": "^4.13.1",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
@@ -28,6 +29,7 @@
     "react": "17",
     "react-dom": "17",
     "react-query": "^3.39.1",
+    "react-swipeable-views": "^0.14.0",
     "tailwind-merge": "^1.2.1"
   },
   "devDependencies": {
