--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@onrewind/ui": "^2.52.2",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-swipeable-views": "^0.13.2",
+    "@types/swiper": "^6.0.0",
     "algoliasearch": "^4.13.1",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
@@ -32,6 +33,7 @@
     "react-query": "^3.39.1",
     "react-router-dom": "^6.14.2",
     "react-swipeable-views": "^0.14.0",
+    "swiper": "^10.0.4",
     "tailwind-merge": "^1.2.1"
   },
   "devDependencies": {
